--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
 
-    <string name="app_name">testclient</string>
+    <string name="app_name">淘无线测试</string>
     <string name="hello_world">Hello world!</string>
     <string name="menu_settings">Settings</string>
-    <string name="title_activity_main">MainActivity</string>
+    <string name="title_activity_main">淘无线测试</string>
 
 </resources>
